--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.9",
+    "@astrojs/compiler": "^2.10.3",
     "@astrojs/mdx": "^2.2.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
@@ -28,7 +29,11 @@
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.32.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "gpxparser": "^3.0.8",
+    "leaflet": "^1.9.4",
+    "leaflet-gpx": "^2.1.2",
     "sharp": "^0.33.3",
+    "solid-js": "^1.9.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
