--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@astrojs/mdx": "^2.2.0",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/solid-js": "^5.0.4",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/inter": "^5.0.17",
     "@fontsource/lora": "^5.0.16",
+    "@raruto/leaflet-elevation": "^2.5.1",
     "@tailwindcss/typography": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
@@ -29,13 +31,20 @@
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.32.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "gpxparser": "^3.0.8",
+    "gpxparser": "^3.0.0",
     "leaflet": "^1.9.4",
     "leaflet-gpx": "^2.1.2",
     "sharp": "^0.33.3",
+    "solid": "^0.2.1",
     "solid-js": "^1.9.4",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss": "^3.4.1",
+    "tw-elements": "^2.0.0",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.16",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
